

Other improvements from previous release:
* Fix building on kernels without PCI support.
* Fix completion of synchronous connect in case of timeout.
* Fix completion of large send in case of unreachable destination.

Caveats:
* No background progression or retransmission is done if the application
  does not invoke an Open-MX routine explicitly.

Open-MX 0.9.1 aka 1.0-rc1 (August 13th 2008, svn r1946)
=======================================================
The MTU 1500 Release.

Major Enhancements:
* Add support for MTU 1500 fabrics with --enable-mtu-1500
  (and --disable-mx-wire).

Other improvements from previous release:
* Fix interface reference leak on the large message sender side.

Open-MX 0.9.0 aka 1.0-rc0 (August 11th 2008, svn r1932)
=======================================================
The Many-Requests Release.

Major Enhancements:
* Fixup management of requests in case of resource shortage to prevent
  some deadlocks and other wrong behaviors.
* Add a FAQ (also available online at http://open-mx.org/FAQ/)
  containing most of the old README and much more.

Other improvements from previous release:
* Optimize intra-node communication by overlapping memory-pinning,
  to be enabled with the demandpin kernel module parameter.
* Fix forgotten/zombie send request support.
* Fix intra-node medium send completion in case of event queue full on
  the target endpoint.
* Fix the management of pinning errors in case of invalid memory segments.
* Fix invalid memory free in case of early-received large message notify.
* Fix omx_init start/stop timeout to better deal with peer discovery
  start/stop delay better.
* Fix cross-compilation when the cross-compiler is given at build and not
  at configure time.
* Fix modinfo and modprobe usage in the startup script, they are supposed
  to be in /sbin.

Open-MX 0.7.0 (June 27th 2008, svn r1806)
=========================================
The Binary Compatibility release.

Major Enhancements: