@@ -1,6 +1,7 @@
 
 
 Other improvements from previous release:
+* Fix race condition between resending and timeouts introduced in 0.9.0.
 * Fix building on kernels without PCI support.
 * Fix completion of synchronous connect in case of timeout.
 * Fix completion of large send in case of unreachable destination.
